2009-07-29 S. Thiell <stephane.thiell@cea.fr>

	* tests/NodeSetScriptTest.py: added unit test for scripts/nodeset.py

	* NodeSet.py: fixed a problem with intersection_update() when used
	with two simple nodes (no rangeset).

	* scripts/nodeset.py: merge -i and -X options issue fix from 1.1
	branch (#29)

2009-07-28 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: remove DeprecationWarning ignore filter (the
	library is now natively Python 2.6/Fedora 11 ready)

	* Change all sets to use built in set type available since Python 2.4
	(the sets module is deprecated).

	* Engine/EPoll.py: added epoll based Engine (Python 2.6+ needed)

	* Engine/Poll.py: added _register_specific() and
	_unregister_specific() methods to match modified Engine base class.

	* Engine/Engine.py: added calls to derived class's
	_register_specific() and _unregister_specific() instead of only
	_modify_specific()

2009-07-23 S. Thiell <stephane.thiell@cea.fr>

	* Replaced popen2.Popen4 (deprecated) by subprocess.Popen (Python 2.4+),
	renaming Worker.Popen2 to Worker.Popen.

	* clush.py: (backport for 1.1 branch) fix another command_timeout (-u)
	issue, now the command_timeout value is passed as the timeout value at
	worker level.

	* Version 1.1 branched.

2009-07-22 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.1 RC 2 released.

	* clush.py: change -u timeout behavior, if set it's now the timeout value
	passed to task.shell() (and not connect_timeout + command_timeout).

	* clush.py: add -o options to pass custom ssh options (#24).

	* Worker/Ssh.py: simple quote escape fix (trac ticket #25).

	* Worker/Popen2.py: simple quote escape fix (trac ticket #25)

	* clush.py: fix options issue when using -f, -u or -t.

2009-07-13 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.1 RC 1 released.

	* Changed license to CeCILL-C (http://www.cecill.info).

	* clush.py (ttyloop): (feature) added '=' special command in
	interactive mode to toggle output format mode (standard/gathered).
