@@ -1,3 +1,11 @@
+2009-08-02 S. Thiell <stephane.thiell@cea.fr>
+
+	* clush.py: (1) remove /step in displayed nodeset when using -b (to
+	allow copy/paste to other tools like ipmipower that doesn't support
+	N-M/STEP ranges), (2) when command timeout is specified (-u), show
+	nodes (on stderr) that didn't have time to fully complete, (3) flush
+	stdio buffers before exiting. [merged from branch 1.1]
+
 2009-07-29 S. Thiell <stephane.thiell@cea.fr>
 
 	* tests/NodeSetScriptTest.py: added unit test for scripts/nodeset.py
